<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Karibou²</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Mot de passe</string>
    <string name="connection" translatable="false">Connexion</string>
    <string name="title_activity_minichat" translatable="false">Karibou²</string>
    <string name="write_or_answer" translatable="false">Ecrire ou répondre à</string>
    <string name="cancel" translatable="false">Annuler</string>
    <string name="send" translatable="false">Envoyer</string>
    <string name="ok" translatable="false">OK</string>
    <string name="choose_action" translatable="false">Choisir l\'action ...</string>
    <string name="action_answer" translatable="false">Répondre</string>
    <string name="action_mark_read" translatable="false">Marquer comme lu</string>
    <string name="no_new_flashmails" translatable="false">Vous n\'avez pas de nouveaux flashmails</string>

    <plurals name="you_have_received_a_flashmail" translatable="false">
        <item quantity="one">Vous avez reçu un flashmail !</item>
        <item quantity="other">Vous avez reçu %1$d flashmails</item>
    </plurals>
    <string name="sent_you" translatable="false">"vous a envoyé"</string>
    <string name="answering_to" translatable="false">En réponse à :</string>
    <string name="no_connection" translatable="false">Il semblerait que vous ne soyez pas connecté au WiFi. L\'application pourrait ne pas fonctionner et entraîner la fin de l\'humanité.</string>
    <string name="taking_risk" translatable="false">Je prends le risque</string>
    <string name="wrong_password" translatable="false">Vérifiez vos identifiants et votre connexion</string>

    <!-- Settings -->
    <string name="action_settings" translatable="false">Paramètres</string>
    <string name="settings" translatable="false">Préférences générales</string>
    <string name="setting_vibration" translatable="false">Motif de vibration</string>
    <string name="setting_vibration_summary" translatable="false">Utiliser le motif de vibration "K2"</string>
    <string name="setting_sync_frequency" translatable="false">Fréquence de synchronisation</string>
    <string name="setting_sync_frequency_summary" translatable="false">Définir la fréquence de synchronisation</string>
</resources>
