<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/k2_light_blue"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="@string/write_or_answer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:background="@color/k2_light_blue"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/pseudo"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/messageField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_below="@id/divider"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

    <TableRow
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="3sp"
        android:gravity="center"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/send" />
    </TableRow>
</RelativeLayout>